# icpay-agent

./: .gitignore  PAYMENT_INTEGRATION_GUIDE.md  PAYMENT_QUICKSTART.md  README.md  dfx.json  package-lock.json  package.json  simple_migration_test
.github/actions/deploy/: action.yml
.github/workflows/: deploy.yml
src/backend/: Cargo.toml
src/frontend/: env.example  index.html  package.json  vite.config.js  vite.config.ts
src/frontend/public/: .ic-assets.json5
src/frontend/src/: config.ts
src/frontend/src/pages/: PaymentAgent.tsx
src/frontend/src/services/: icpayService.ts
src/frontend/src/types/: payment.ts
