[package]
name = "backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
candid = "0.10"
ic-cdk = "0.17"
ic-cdk-timers = "0.11" # Feel free to remove this dependency if you don't need timers
ic-stable-structures = "0.5.6" 
serde = { version = "1.0.9", features = ["derive"] } 
bincode = "1.3"
serde_json = "1.0"  # For JSON serialization/deserialization with Paystack API
base64 = "0.21"
rand = { version = "0.8", features = ["getrandom"] }
getrandom = { version = "0.2", features = ["custom"] }
chrono = { version = "0.4.41", default-features = false, features = ["serde", "clock"] }
sha2 = "0.10"  # For webhook signature verification (HMAC SHA512)
hex = "0.4"  # For hex encoding of signatures

[dev-dependencies]
pocket-ic = "9.0.2"
